 * PCX format support (TODO: r666)
 * opening image files in archives with libarchive (TODO: r665)
 * jump back and forth from the last viewed image with the ' key and 
   the _lastfileindex variable (r667)
 * added --sort and --sort-basename (TODO: r669)
 * changed meaning of of _ignorecase, introduced _re_search_opts (TODO: r671)
 * added --load-image-descriptions-file (TODO: r672)
 * search (and jump) on image descriptions (TODO: r674)
 * EXIF tags will make it into the Image's Namespace. (TODO: r675)
 * special image variable expandos/specifiers (TODO: (undocumented) r676)
 * stat() checking of files on load can be disabled with _preload_checks (TODO: 678)
 * added --no-stat-push to set _preload_checks=0 before initialization (TODO: 679)

                Version 0.4

 * changed --random and introduced --random-no-seed option
 * customizable status bar file info string (--enable-custom-status-bar)
 * introduced --as-text to render printable bytes as text

                Version 0.4-beta

 * interface to the GraphicsMagic library (more graphics formats supported)
 * introduced bitwise AND and OR operators
 * support for rendering "matrix market" numerical matrix files (with librsb)
 * X mode not anymore default in aalib, available at option 
 * libjpeg usage fixes
 * libpng usage fixes (support for PNG_LIBPNG_VER>=10209)
 * documentation improvements (e.g.: fim man page is auto-generated)
 * "imlib2" X-based output device support 
 * "sdl" output device improvements (fullscreen/mouse/windowed options, I/O, ..)
 * more default consolefont options (e.g.: hardcoded consolefonts support)
 * configure option to disable the fim history file
 * improvements to scale, goto, other commands
 * improved directories reading
 * introduced --no-commandline, --no-internal-config switches
 * aggregated some commands for clarity
 * output console can be disabled at configure time
 * important fbdev bug fixes 
 * autocompletion of variable identifiers

        	Version 0.3
